New comm plan and a bunch of other various changes and edits

--- a/scripts/mailings/ug_letter.html
+++ b/scripts/mailings/ug_letter.html
@@ -31,8 +31,13 @@
     Donna Gainer (<a href="mailto:browning@colled.msstate.edu">browning@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study.&nbsp; Donna will email you within 24-48 hours with more information regarding advising and course registration.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'Human Development & Family Sci / Child Development (BS)' %}<br />
     Dr. Julie Parker will be the adviser for the online Bachelor of Science in Human Development and Family Science with a concentration in Child Development. Her email and contact number are <a href="mailto:jparker@humansci.msstate.edu">jparker@humansci.msstate.edu</a>, 662.325.2950.<br />
-    {% endif %}<br />
-    Please record the following information, which will be very important throughout your time as an MSU student.
+    {% endif %}{% if {{ug_aca_int_app}} == 'Electrical Engineering / Power and Energy Engineering (BS)' or {{ug_aca_int_app}} == 'Electrical Engineering (BS)'%}<br />
+    Kylie Crosland (<a href="mailto:kylie@ece.msstate.edu">kylie@ece.msstate.edu</a>) in the Department of Electrical and Computer Engineering will be your advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.  In the meantime, please pay attention to the information and follow the steps below.<br />
+    {% endif %}{% if {{ug_aca_int_app}} == 'Industrial Engineering (BS)'%}<br />
+    You will need to email the Department of Industrial and Systems Engineering at <a href="mailto:ise-advising@lists.msstate.edu">ise-advising@lists.msstate.edu</a> for advising assistance. Please wait 24-48 hours before contacting them to allow time for all records to be updated.  In the meantime, please pay attention to the information and follow the steps below.<br />
+    Please record the following information, which will be very important throughout your time as an MSU student.<br />
+    {% endif %}
+  
     <ul>
       <li>
         Your MSU ID is&nbsp;<strong>{{erpid}}</strong>.
