--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -99,6 +99,18 @@
             Dr. Mohammad Marufuzzaman, <a href="mailto:maruf@ise.msstate.edu">maruf@ise.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Engineering / Mechanical Engineering' %}<br />
             Tonya W. Stone, <a href="mailto:tstone@me.msstate.edu">tstone@me.msstate.edu</a>, will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting her to allow time for all records to be updated.<br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Certificate / Public Procurement' %}<br />
+            Dr. Sawsan Abutabenjeh, <a href="mailto:sawsan.abutabenjeh@msstate.edu">sawsan.abutabenjeh@msstate.edu</a>, in the Department of Political Science & Public Administration will be your advisor and will assist you throughout your course of study. Dr. Abutabenjeh will email you within a few days with more information regarding advising and course registration.  In the meantime, please pay attention to the information and follow the steps below.
+            <br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Public Policy & Adm / Public Policy & Admin' %}<br />
+            Dr. Dragan Stanisevski, (<a href="mailto:dstanisevski@pspa.msstate.edu">dstanisevski@pspa.msstate.edu</a>, 662.325.7865), will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting him to allow time for all records to be updated.
+            <br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Counselor Education / Rehabilitation Counseling' %}<br />
+            Dr. Zaccheus J. Ahonle, (<a href="mailto:zja34@msstate.edu">zja34@msstate.edu</a> will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.
+            <br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Certificate / Athlete Engineering' %}<br />
+            Dr. Reuben Burch, (<a href="mailto:burch@ise.msstate.edu">burch@ise.msstate.edu</a> will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.
+            <br />
             {% endif %}Please record the following information, which will be very important throughout your time as an MSU student.
             <ul>
               <li>
