letter changes and updates to athlete

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -40,7 +40,7 @@
             Elissa Landers (<a href="mailto:jep77@msstate.edu">jep77@msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             <br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Arts Teach Secondary / Secondary Teacher Alt Route' %}<br />
-            Katrina Miller (<a href="mailto:kmiller@colled.msstate.edu">kmiller@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
+            Susan Steward (<a href="mailto:SSteward@colled.msstate.edu">SSteward@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Secondary Education' %}<br />
             Dr. Missy Hopper (<a href="mailto:pfh7@colled.msstate.edu">pfh7@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Educational Leadership / School Administration' %}<br />
@@ -50,7 +50,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Distance Education' or {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Instructional Design' or {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Multimedia' %}<br />
             Dr. Stephen Lee, <a href="mailto:slee@colled.msstate.edu">slee@colled.msstate.edu</a> is the program coordinator. You will be notified the name of your advisor, who will assist you throughout your course of study. Please wait 24-48 hours before contacting the coordinator to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Arts Teach Special / Special Ed Alternate Route' %}<br />
-            Susan Steward (<a href="mailto:ssteward@colled.msstate.edu">ssteward@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
+            Elizabeth Palmer (<a href="mailto:ehall@colled.msstate.edu">ehall@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Arts in Teaching / Community College Education' or {{gr_aca_int_app}} == 'Master of Science / Workforce Education Leadership' %}<br />
             Dr. Stephanie King (<a href="mailto:sking@colled.msstate.edu">sking@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting your advisor to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Forestry' %}<br />
@@ -110,6 +110,9 @@
             <br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Certificate / Athlete Engineering' %}<br />
             Dr. Reuben Burch, (<a href="mailto:burch@ise.msstate.edu">burch@ise.msstate.edu</a> will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.
+            <br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'No Degree / Unclassified-Grad' %}<br />
+            Lily Hudson will be your online coordinator and will be here to assist you throughout your academic career at MSU. If you have any questions, please contact her at <a href="mailto:lily.hudson@msstate.edu">lily.hudson@msstate.edu</a>
             <br />
             {% endif %}Please record the following information, which will be very important throughout your time as an MSU student.
             <ul>
