--- a/scripts/mailings/ug_letter.html
+++ b/scripts/mailings/ug_letter.html
@@ -20,7 +20,7 @@
     {% endif %}{% if {{ug_aca_int_app}} == 'Pre-Interdisciplinary Studies (BS)' %}<br />
     Kali Dunlap (<a href="mailto:k.dunlap@msstate.edu">k.dunlap@msstate.edu</a>) and Evan Hawkins (<a href="mailto:e.hawkins@msstate.edu">e.hawkins@msstate.edu</a>) will be your program advisors and will assist you throughout your course of study.&nbsp; Kali or Evan will email you within 24-48 hours with more information regarding advising and course registration.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'Elementary Education / Early Childhood (BS)' or {{ug_aca_int_app}} == 'Elementary Education / Middle School (BS)' %}<br />
-    Michelle Gaither, <a href="mailto:mgaither@colled.msstate.edu">mgaither@colled.msstate.edu</a>, is the Elementary Education program advisor and will assist you throughout your course of study.&nbsp; Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
+    Stephanie Etheridge, <a href="mailto:SEtheridge@colled.msstate.edu">SEtheridge@colled.msstate.edu</a>, is the Elementary Education program advisor and will assist you throughout your course of study.&nbsp; Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'Industrial Tech / Industrial Automation (BS)' or {{ug_aca_int_app}} == 'Industrial Tech / Manufacturing & Maintenance (BS)' %}<br />
     Lara Threet, <a href="mailto:lthreet@colled.msstate.edu">lthreet@colled.msstate.edu</a>, is the program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
     {% endif %}{% if {{ug_aca_int_app}} == 'History (BA)' %}<br />
