MSRC and other edits

--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -29,7 +29,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Agriculture / Agriculture / Animal and Dairy Science' %}<br />
             Dr. Jamie Larson (<a href="mailto:j.larson@msstate.edu">j.larson@msstate.edu</a>, 662.325.0040) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Early Intervention' %}<br />
-            Dr. Julie Parker (<a href="mailto:jparker@humansci.msstate.edu">jparker@humansci.msstate.edu</a>, 662.325.2950) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
+            Dr. Julie Parker (<a href="mailto:jparker@humansci.msstate.edu">jparker@humansci.msstate.edu</a>, 662.325.0828) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             <br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Food Sc Nutr. Health Prom (GR) / Health Promotion' %}<br />
             Dr. Leah Pylate (last names A-I) (<a href="mailto:lbp77@msstate.edu">lbp77@msstate.edu</a>), Dr. Antonio Gardner (last names J-R) (<a href="mailto:ajg130@msstate.edu">ajg130@msstate.edu</a>), or Dr. Barry Hunt (last names S-Z) (<a href="mailto:bhunt@fsnhp.msstate.edu">bhunt@fsnhp.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting your advisor to allow time for all records to be updated.<br />
@@ -48,7 +48,7 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / PhD in Community Co Leadership' %}<br />
             Dr. Stephanie King (<a href="mailto:sking@colled.msstate.edu">sking@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting your advisor to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Distance Education' or {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Instructional Design' or {{gr_aca_int_app}} == 'Master of Sci Instr Tech / Instructional Technology / IT Multimedia' %}<br />
-            Dr. Stephen Lee, <a href="mailto:slee@colled.msstate.edu">slee@colled.msstate.edu</a> is the program coordinator. You will be notified the name of your advisor, who will assist you throughout your course of study. Please wait 24-48 hours before contacting the coordinator to allow time for all records to be updated.<br />
+            You will soon receive a letter from the Department of Instructional Systems and Workforce Development. In the letter, you will find the name and the contact information of your advisor, who will assist you throughout your course of study. Please wait 48-72 hours before contacting the coordinator to allow time for all records to be updated<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Arts Teach Special / Special Ed Alternate Route' %}<br />
             Elizabeth Palmer (<a href="mailto:ehall@colled.msstate.edu">ehall@colled.msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.<br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Arts in Teaching / Community College Education' or {{gr_aca_int_app}} == 'Master of Science / Workforce Education Leadership' %}<br />
@@ -106,10 +106,16 @@
             Dr. Dragan Stanisevski, (<a href="mailto:dstanisevski@pspa.msstate.edu">dstanisevski@pspa.msstate.edu</a>, 662.325.7865), will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting him to allow time for all records to be updated.
             <br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Counselor Education / Rehabilitation Counseling' %}<br />
-            Dr. Zaccheus J. Ahonle, (<a href="mailto:zja34@msstate.edu">zja34@msstate.edu</a> will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting her to allow time for all records to be updated.
+            Dr. Zaccheus J. Ahonle, (<a href="mailto:zja34@msstate.edu">zja34@msstate.edu</a>) will be your program advisor and will assist you throughout your course of study. Please wait 24-48 hours before contacting him to allow time for all records to be updated.
             <br />
             {% endif %}{% if {{gr_aca_int_app}} == 'Certificate / Athlete Engineering' %}<br />
             Dr. Reuben Burch, (<a href="mailto:burch@ise.msstate.edu">burch@ise.msstate.edu</a> will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.
+            <br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Certificate / Data Science' %}<br />
+            Lynn Taylor will be your academic coordinator and will be here to assist you throughout your academic career at MSU. If you have any questions, please contact her at <a href="mailto:lynn@datascience.msstate.edu.">lynn@datascience.msstate.edu</a>.
+            <br />
+            {% endif %}{% if {{gr_aca_int_app}} == 'Doctor of Philosophy / Agricultural Science / Engineering Technology' %}<br />
+            Dr. Joel Paz, (<a href="mailto:jpaz@abe.msstate.edu">jpaz@abe.msstate.edu</a>, 662.325.4798) will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.
             <br />
             {% endif %}{% if {{gr_aca_int_app}} == 'No Degree / Unclassified-Grad' %}<br />
             Lily Hudson will be your online coordinator and will be here to assist you throughout your academic career at MSU. If you have any questions, please contact her at <a href="mailto:lily.hudson@msstate.edu">lily.hudson@msstate.edu</a>
