--- a/scripts/mailings/gr_letter.html
+++ b/scripts/mailings/gr_letter.html
@@ -120,7 +120,9 @@
             {% endif %}{% if {{gr_aca_int_app}} == 'No Degree / Unclassified-Grad' %}<br />
             Lily Hudson will be your online coordinator and will be here to assist you throughout your academic career at MSU. If you have any questions, please contact her at <a href="mailto:lily.hudson@msstate.edu">lily.hudson@msstate.edu</a>
             <br />
-            {% endif %}Please record the following information, which will be very important throughout your time as an MSU student.
+            {% endif %}{% if {{gr_aca_int_app}} == 'Master of Science / Plant & Soil Sciences / Agronomy' or {{gr_aca_int_app}} == 'Master of Science / Plant & Soil Sciences / Horticulture' or {{gr_aca_int_app}} == 'Master of Science / Plant & Soil Sciences / Weed Science' or {{gr_aca_int_app}} == 'Doctor of Philosophy / Plant & Soil Sciences / Horticulture' or {{gr_aca_int_app}} == 'Doctor of Philosophy / Plant & Soil Sciences / Agronomy' or {{gr_aca_int_app}} == 'Doctor of Philosophy / Plant & Soil Sciences / Weed Science'%}<br />
+            Dr. Michael Cox, (<a href="mailto:msc15@msstate.edu">msc15@msstate.edu</a>, 662.325.2311) will be your program advisor and will assist you throughout your course of study. Please wait 48 hours before contacting him to allow time for all records to be updated.
+            {% endif %}<br />Please record the following information, which will be very important throughout your time as an MSU student.
             <ul>
               <li>
                 Your MSU ID is&nbsp;<strong>{{erpid}}</strong>.
